// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders the component 1`] = `
.emotion-0 {
  display: inline-block;
  color: #192532;
  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol;
  font-size: 0.875rem;
  font-weight: 500;
  line-height: 1.5;
  margin-bottom: calc(1rem * (8 / 16));
}

.emotion-1 {
  display: block;
  margin: 0;
  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol;
  color: #606C7C;
  font-size: 0.875rem;
  line-height: 1.5;
  text-rendering: optimizeLegibility;
}

<form
  class="Form"
  data-test-id="cf-ui-form"
>
  <div
    class="Form__item Form__item--default"
  >
    <div
      class="TextField TextField--full"
      data-test-id="cf-ui-text-field"
    >
      <div
        class="TextField__label-wrapper"
      >
        <label
          class="emotion-0"
          data-test-id="cf-ui-form-label"
          for="nameInput"
        >
          Name
        </label>
      </div>
      <div
        class="TextInput TextInput--full"
      >
        <input
          aria-label="nameInput"
          class="TextInput__input"
          data-test-id="cf-ui-text-input"
          id="nameInput"
          name="nameInput"
          required=""
          value="Johannes Bugiel"
        />
      </div>
      <div
        class="TextField__hints"
      >
        <p
          class="TextField__help-text emotion-1"
          data-test-id="cf-ui-help-text"
        >
          Please enter your name
        </p>
      </div>
    </div>
  </div>
</form>
`;

exports[`renders the component with an additional class name 1`] = `
.emotion-0 {
  display: inline-block;
  color: #192532;
  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol;
  font-size: 0.875rem;
  font-weight: 500;
  line-height: 1.5;
  margin-bottom: calc(1rem * (8 / 16));
}

.emotion-1 {
  display: block;
  margin: 0;
  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol;
  color: #606C7C;
  font-size: 0.875rem;
  line-height: 1.5;
  text-rendering: optimizeLegibility;
}

<form
  class="Form my-extra-class"
  data-test-id="cf-ui-form"
>
  <div
    class="Form__item Form__item--default"
  >
    <div
      class="TextField TextField--full"
      data-test-id="cf-ui-text-field"
    >
      <div
        class="TextField__label-wrapper"
      >
        <label
          class="emotion-0"
          data-test-id="cf-ui-form-label"
          for="nameInput"
        >
          Name
        </label>
      </div>
      <div
        class="TextInput TextInput--full"
      >
        <input
          aria-label="nameInput"
          class="TextInput__input"
          data-test-id="cf-ui-text-input"
          id="nameInput"
          name="nameInput"
          required=""
          value="Johannes Bugiel"
        />
      </div>
      <div
        class="TextField__hints"
      >
        <p
          class="TextField__help-text emotion-1"
          data-test-id="cf-ui-help-text"
        >
          Please enter your name
        </p>
      </div>
    </div>
  </div>
</form>
`;

exports[`renders the component with condensed spacing 1`] = `
.emotion-0 {
  display: inline-block;
  color: #192532;
  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol;
  font-size: 0.875rem;
  font-weight: 500;
  line-height: 1.5;
  margin-bottom: calc(1rem * (8 / 16));
}

.emotion-1 {
  display: block;
  margin: 0;
  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol;
  color: #606C7C;
  font-size: 0.875rem;
  line-height: 1.5;
  text-rendering: optimizeLegibility;
}

<form
  class="Form my-extra-class"
  data-test-id="cf-ui-form"
>
  <div
    class="Form__item Form__item--condensed"
  >
    <div
      class="TextField TextField--full"
      data-test-id="cf-ui-text-field"
    >
      <div
        class="TextField__label-wrapper"
      >
        <label
          class="emotion-0"
          data-test-id="cf-ui-form-label"
          for="nameInput"
        >
          Name
        </label>
      </div>
      <div
        class="TextInput TextInput--full"
      >
        <input
          aria-label="nameInput"
          class="TextInput__input"
          data-test-id="cf-ui-text-input"
          id="nameInput"
          name="nameInput"
          required=""
          value="Johannes Bugiel"
        />
      </div>
      <div
        class="TextField__hints"
      >
        <p
          class="TextField__help-text emotion-1"
          data-test-id="cf-ui-help-text"
        >
          Please enter your name
        </p>
      </div>
    </div>
  </div>
</form>
`;
